# fastcomments-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  update.sh
.openapi-generator/: FILES
client/: Cargo.toml  README.md
client/.openapi-generator/: FILES
client/docs/: AddDomainConfig200Response.md  AddDomainConfig200ResponseAnyOf.md  AddDomainConfigParams.md  AddPageApiResponse.md  AddSsoUserApiResponse.md  AggregateQuestionResults200Response.md  AggregateQuestionResultsResponse.md  AggregateTimeBucket.md  AggregationRequest.md  AggregationRequestSort.md  AggregationResponseStats.md  AggregationValue.md  ApiCreateUserBadgeResponse.md  ApiEmptyResponse.md  ApiEmptyResponseAnyOf.md  ApiEmptySuccessResponse.md  ApiError.md  ApiGetCommentResponse.md  ApiGetCommentsResponse.md  ApiGetUserBadgeProgressListResponse.md  ApiGetUserBadgeProgressResponse.md  ApiGetUserBadgeResponse.md  ApiGetUserBadgesResponse.md  ApiPage.md  ApiUserSubscription.md  ApissoUser.md  BlockFromComment200Response.md  BlockFromCommentParams.md  BlockFromCommentPublic200Response.md  BlockSuccess.md  BulkAggregateQuestionItem.md  BulkAggregateQuestionResults200Response.md  BulkAggregateQuestionResultsRequest.md  BulkAggregateQuestionResultsResponse.md  ChangeCommentPinStatusResponse.md  CheckBlockedCommentsResponse.md  CheckBlockedCommentsResponseAnyOf.md  CheckedCommentsForBlocked200Response.md  CombineCommentsWithQuestionResults200Response.md  (+172 more)
core/: Cargo.toml  README.md
core/examples/: secure.rs  simple.rs
core/examples/helpers/: mod.rs
core/src/: comment_widget_config.rs  lib.rs
core/src/sso/: fastcomments_sso.rs  helpers.rs  mod.rs  secure_sso_payload.rs  secure_sso_user_data.rs  simple_sso_user_data.rs
docs/: AggregationItem.md  AggregationOpType.md  AggregationOperation.md  AggregationResponse.md  ApiError.md  ApiStatus.md  BooleanQueryParam.md  ChangeCommentPinStatusResponseAnyOf.md  CheckBlockedCommentsResponse.md  CheckedCommentsForBlocked200Response.md  CommentTextUpdateRequest.md  CommentUserBadgeInfo.md  CommentUserHashTagInfo.md  CommentUserMentionInfo.md  CommenterNameFormats.md  CustomConfigParameters.md  DefaultApi.md  DeleteComment200Response.md  DeleteCommentVote200Response.md  GetCommentVoteUserNames200Response.md  GetCommentVoteUserNamesSuccessResponse.md  GetComments200Response.md  GetCommentsResponsePublicComment.md  GetCommentsResponseWithPresencePublicComment.md  GetMyNotificationsResponse.md  GetUserNotificationCountResponse.md  ImportedApiStatusPeriodSuccess.md  NotificationType.md  PublicApi.md  PublicApiDeleteCommentResponse.md  PublicApiDeleteCommentResponseAnyOf.md  PublicApiSetCommentTextResponseAnyOf.md  QueryPredicate.md  QueryPredicateValue.md  RenderableUserNotification.md  ResetUserNotifications200Response.md  SaveCommentResponseOptimized.md  SaveCommentsResponseWithPresence.md  SortDirections.md  SsoSecurityLevel.md  (+3 more)
examples/: secure.rs  simple.rs
src/: lib.rs
sso/: fastcomments_sso.rs  helpers.rs  secure_sso_payload.rs  secure_sso_user_data.rs  simple_sso_user_data.rs
tests/: test_sso.rs  test_sso_integration.rs
(+276 files in other folders)
