[package]
name = "fastcomments-sdk"
version = "0.0.2"
authors = ["FastComments <support@fastcomments.com>"]
description = "Official FastComments Rust SDK (Typed API Client & Utilities)"
license = "MIT"
edition = "2021"
repository = "https://github.com/fastcomments/fastcomments-rust"
homepage = "https://fastcomments.com"
keywords = ["fastcomments", "comments", "commenting-system", "api", "sdk"]
categories = ["api-bindings", "web-programming"]
include = [
    "src/**/*",
    "sso/**/*",
    "client/src/**/*",
    "client/Cargo.toml",
    "examples/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"

# HTTP client
reqwest = { version = "^0.12", features = ["json", "multipart"] }
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }

# SSO/Crypto
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"

# Async runtime
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "fastcomments_sdk"
path = "src/lib.rs"

[[example]]
name = "secure"
path = "examples/secure.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"
