[package]
name = "fastcomments-core"
version = "0.0.1"
authors = ["Fastcomments"]
description = "A Rust library for FastComments"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
fastcomments-client = { workspace = true }
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
